--- a/urban-frontend/index.html
+++ b/urban-frontend/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="https://i.ibb.co.com/DtMsk9f/Leonardo-Phoenix-Create-a-modern-eyecatching-logo-for-the-ecom-2.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>URBAN FASHION</title>
   </head>
